--- a/AboutUs.html
+++ b/AboutUs.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1><img src="logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="AboutUs.html">About Us</a>
