--- a/ContactUs.html
+++ b/ContactUs.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1><img src="logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="AboutUs.html">About Us</a>
@@ -37,32 +37,32 @@
     <section>
         <h2>Leadership</h2>
         <div>
-            <img src="andy.jpg" alt="Picture of Andrew Smith" height="250">
+            <img src="images/andy.jpg" alt="Picture of Andrew Smith" height="250">
             <h3>Andrew Smith</h3>
             <p>President<br>
                 <a href="mailto:ATS29@email.sc.edu" target=”_blank”>ATS29@email.sc.edu</a>
             </p>
         </div>
         <div>
-            <img src="baker.jpg" alt="Picture of Baker Womack" height="250">
+            <img src="images/baker.jpg" alt="Picture of Baker Womack" height="250">
             <h3>Baker Womack</h3>
             <p>Vice President<br>
             <a href="mailto:BWOMACK@email.sc.edu" target=”_blank”>BWOMACK@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="naveen.png" alt="Picture of Naveen Chithan" height="250">
+            <img src="images/naveen.png" alt="Picture of Naveen Chithan" height="250">
             <h3>Naveen Chithan</h3>
             <p>Treasurer<br>
             <a href="mailto:NCHITHAN@email.sc.edu" target=”_blank”>NCHITHAN@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="nikhil.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
+            <img src="images/nikhil.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
             <h3>Nikhil Vaishnav</h3>
             <p>Secretary<br>
             <a href="mailto:vaishnav@email.sc.edu" target=”_blank”>vaishnav@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="jake.jpg" alt="Picture of Jacob Sherer"  height="250">
+            <img src="images/jake.jpg" alt="Picture of Jacob Sherer"  height="250">
             <h3>Jacob Sherer</h3>
             <p>CTO<br>
             <a href="mailto:jsherer@email.sc.edu" target=”_blank”>jsherer@email.sc.edu</a></p>
