--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1><img src="logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="AboutUs.html">About Us</a>
@@ -19,7 +19,7 @@
     </header>
 
     <section>
-        <img src="homeBackground.jpg" alt="Background" width="600"><h2>University of South Carolina Cybersecurity Club</h2>
+        <img src="images/homeBackground.jpg" alt="Background" width="600"><h2>University of South Carolina Cybersecurity Club</h2>
     </section>
 
     <div>
