--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -9,13 +9,12 @@
     <header>
         <h1><img src="images/logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
-        </nav>
+            <a href="pages/index.html">Home</a>
+            <a href="pages/AboutUs.html">About Us</a>
+            <a href="pages/ContactUs.html">Contact Us</a>
+            <a href="pages/Resources.html">Resources</a>
+            <a href="pages/FAQ.html">FAQ</a>
+            <a href="pages/Events.html">Events</a>
     </header>
 
     <div>
