--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -7,7 +7,7 @@
 
 <body>
     <header>
-        <h1><img src="images/logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="pages/index.html">Home</a>
             <a href="pages/AboutUs.html">About Us</a>
