--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -7,14 +7,14 @@
 
 <body>
     <header>
-        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
+        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="pages/index.html">Home</a>
-            <a href="pages/AboutUs.html">About Us</a>
-            <a href="pages/ContactUs.html">Contact Us</a>
-            <a href="pages/Resources.html">Resources</a>
-            <a href="pages/FAQ.html">FAQ</a>
-            <a href="pages/Events.html">Events</a>
+            <a href="/pages/index.html">Home</a>
+            <a href="/pages/AboutUs.html">About Us</a>
+            <a href="/pages/ContactUs.html">Contact Us</a>
+            <a href="/pages/Resources.html">Resources</a>
+            <a href="/pages/FAQ.html">FAQ</a>
+            <a href="/pages/Events.html">Events</a>
     </header>
 
     <div>
@@ -36,32 +36,32 @@
     <section>
         <h2>Leadership</h2>
         <div>
-            <img src="images/andy.jpg" alt="Picture of Andrew Smith" height="250">
+            <img src="/images/andy.jpg" alt="Picture of Andrew Smith" height="250">
             <h3>Andrew Smith</h3>
             <p>President<br>
                 <a href="mailto:ATS29@email.sc.edu" target=”_blank”>ATS29@email.sc.edu</a>
             </p>
         </div>
         <div>
-            <img src="images/baker.jpg" alt="Picture of Baker Womack" height="250">
+            <img src="/images/baker.jpg" alt="Picture of Baker Womack" height="250">
             <h3>Baker Womack</h3>
             <p>Vice President<br>
             <a href="mailto:BWOMACK@email.sc.edu" target=”_blank”>BWOMACK@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="images/naveen.png" alt="Picture of Naveen Chithan" height="250">
+            <img src="/images/naveen.png" alt="Picture of Naveen Chithan" height="250">
             <h3>Naveen Chithan</h3>
             <p>Treasurer<br>
             <a href="mailto:NCHITHAN@email.sc.edu" target=”_blank”>NCHITHAN@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="images/nikhil.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
+            <img src="/images/nikhil.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
             <h3>Nikhil Vaishnav</h3>
             <p>Secretary<br>
             <a href="mailto:vaishnav@email.sc.edu" target=”_blank”>vaishnav@email.sc.edu</a></p>
         </div>
         <div>
-            <img src="images/jake.jpg" alt="Picture of Jacob Sherer"  height="250">
+            <img src="/images/jake.jpg" alt="Picture of Jacob Sherer"  height="250">
             <h3>Jacob Sherer</h3>
             <p>CTO<br>
             <a href="mailto:jsherer@email.sc.edu" target=”_blank”>jsherer@email.sc.edu</a></p>
