--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="/pages/AboutUs.html">About Us</a>
+            <a href="./pages/AboutUs.html">About Us</a>
             <a href="/pages/ContactUs.html">Contact Us</a>
             <a href="/pages/Resources.html">Resources</a>
             <a href="/pages/FAQ.html">FAQ</a>
