--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="./pages/AboutUs.html">About Us</a>
-            <a href="/pages/ContactUs.html">Contact Us</a>
-            <a href="/pages/Resources.html">Resources</a>
-            <a href="/pages/FAQ.html">FAQ</a>
-            <a href="/pages/Events.html">Events</a>
+            <a href="./pages/ContactUs.html">Contact Us</a>
+            <a href="./pages/Resources.html">Resources</a>
+            <a href="./pages/FAQ.html">FAQ</a>
+            <a href="./pages/Events.html">Events</a>
         </nav>
     </header>
 
