--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -9,12 +9,12 @@
     <header>
         <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="/pages/AboutUs.html">About Us</a>
-            <a href="/pages/ContactUs.html">Contact Us</a>
-            <a href="/pages/Resources.html">Resources</a>
-            <a href="/pages/FAQ.html">FAQ</a>
-            <a href="/pages/Events.html">Events</a>
+            <a href="index.html">Home</a>
+            <a href="./pages/AboutUs.html">About Us</a>
+            <a href="./pages/ContactUs.html">Contact Us</a>
+            <a href="./pages/Resources.html">Resources</a>
+            <a href="./pages/FAQ.html">FAQ</a>
+            <a href="./pages/Events.html">Events</a>
     </header>
 
     <div>
