--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,12 +10,11 @@
         <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="pages/AboutUs.html">About Us</a>
-            <a href="pages/ContactUs.html">Contact Us</a>
-            <a href="pages/Resources.html">Resources</a>
-            <a href="pages/FAQ.html">FAQ</a>
-            <a href="pages/Events.html">Events</a>
-        </nav>
+            <a href="AboutUs.html">About Us</a>
+            <a href="ContactUs.html">Contact Us</a>
+            <a href="Resources.html">Resources</a>
+            <a href="FAQ.html">FAQ</a>
+            <a href="Events.html">Events</a>
     </header>
 
     <article>
