--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="University of South Carolina Cybersecurity Club">
+    <meta name="keywords" content="USC, UofSC, Cybersecurity, Cybersecurity club, Cyber club, Information Security, 
+    Cyber Defense, Network Security, Cyber Threats, Security Awareness, Student Organization, 
+    Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
+    <meta name="author" content="Jacob Sherer">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7BJJSEFFZE');
+</script>
 
 <body>
     <header>
