--- a/ContactUs.html
+++ b/ContactUs.html
@@ -8,7 +8,8 @@
     Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
     <meta name="author" content="Jacob Sherer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Contact Us - UofSC Cybersecurity Club</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
@@ -22,64 +23,64 @@
 
 <body>
     <header>
-        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="AboutUs.html">About Us</a>
+            <a class="nav-item" href="ContactUs.html">Contact Us</a>
+            <a class="nav-item" href="Resources.html">Resources</a>
+            <a class="nav-item" href="FAQ.html">FAQ</a>
+            <a class="nav-item" href="Events.html">Events</a>
     </header>
 
-    <div>
-        <aside>
-            Join our Discord for more information and to ask any questions! <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
+    <div class="contact-container">
+        <aside class="discord">
+            <p class="discord-text">Join our Discord for more information and to ask any questions!</p>
+            <a class="discord-link" href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
         </aside>
-        <aside>Or fill out this form to contact us directly!
+        <aside class="form">Or fill out this form to contact us directly!<br><br>
             <form>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name"><br>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email"><br>
-                <label for="question">Question/Submission:</label>
+                <label for="question">Question:</label>
                 <textarea name="question" id="question" rows="5" cols="25"></textarea>
             </form>
         </aside>
     </div>
 
-    <section>
+    <section class="leadership">
         <h2>Leadership</h2>
-        <div>
-            <img src="/images/andy.jpg" alt="Picture of Andrew Smith" height="250">
+        <div class="leader-container">
+            <img src="images/andy 300.jpg" alt="Picture of Andrew Smith" height="250">
             <h3>Andrew Smith</h3>
-            <p>President<br>
-                <a href="mailto:ATS29@email.sc.edu" target=”_blank”>ATS29@email.sc.edu</a>
-            </p>
+            <p>President</p>
+            <a href="mailto:ATS29@email.sc.edu" target=”_blank”>ATS29@email.sc.edu</a>
         </div>
-        <div>
-            <img src="/images/baker.jpg" alt="Picture of Baker Womack" height="250">
+        <div class="leader-container">
+            <img src="images/baker300.jpg" alt="Picture of Baker Womack" height="250">
             <h3>Baker Womack</h3>
-            <p>Vice President<br>
-            <a href="mailto:BWOMACK@email.sc.edu" target=”_blank”>BWOMACK@email.sc.edu</a></p>
+            <p>Vice President</p>
+            <a href="mailto:BWOMACK@email.sc.edu" target=”_blank”>BWOMACK@email.sc.edu</a>
         </div>
-        <div>
-            <img src="/images/naveen.png" alt="Picture of Naveen Chithan" height="250">
+        <div class="leader-container">
+            <img src="images/naveen300.png" alt="Picture of Naveen Chithan" height="250">
             <h3>Naveen Chithan</h3>
-            <p>Treasurer<br>
-            <a href="mailto:NCHITHAN@email.sc.edu" target=”_blank”>NCHITHAN@email.sc.edu</a></p>
+            <p>Treasurer</p>
+            <a href="mailto:NCHITHAN@email.sc.edu" target=”_blank”>NCHITHAN@email.sc.edu</a><
         </div>
-        <div>
-            <img src="/images/nikhil.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
+        <div class="leader-container">
+            <img src="images/nikhil300.jpg" alt="Picture of Nikhil Vaishnav"  height="250">
             <h3>Nikhil Vaishnav</h3>
-            <p>Secretary<br>
-            <a href="mailto:vaishnav@email.sc.edu" target=”_blank”>vaishnav@email.sc.edu</a></p>
+            <p>Secretary</p>
+            <a href="mailto:vaishnav@email.sc.edu" target=”_blank”>vaishnav@email.sc.edu</a>
         </div>
-        <div>
-            <img src="/images/jake.jpg" alt="Picture of Jacob Sherer"  height="250">
+        <div class="leader-container">
+            <img src="images/jake300.jpg" alt="Picture of Jacob Sherer"  height="250">
             <h3>Jacob Sherer</h3>
-            <p>CTO<br>
-            <a href="mailto:jsherer@email.sc.edu" target=”_blank”>jsherer@email.sc.edu</a></p>
+            <p>CTO</p>
+            <a href="mailto:jsherer@email.sc.edu" target=”_blank”>jsherer@email.sc.edu</a>
         </div>
     </section>
 
