--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,7 +8,8 @@
     Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
     <meta name="author" content="Jacob Sherer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+    <title>About Us - UofSC Cybersecurity Club</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
@@ -22,14 +23,14 @@
 
 <body>
     <header>
-        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="AboutUs.html">About Us</a>
+            <a class="nav-item" href="ContactUs.html">Contact Us</a>
+            <a class="nav-item" href="Resources.html">Resources</a>
+            <a class="nav-item" href="FAQ.html">FAQ</a>
+            <a class="nav-item" href="Events.html">Events</a>
     </header>
 
     <article>
@@ -52,10 +53,10 @@
                 move into a classroom where we will have some form of learning experience, whether it’s a presentation by a club 
                 member or hands on lab that you could do from your laptop.</p>
         </article>
-        <aside>
+        <aside class="map">
             <!--Copied from Google Maps-->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.1250268570593!2d-81.03204692362301!3d33.98932222104887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f8bad8f7f3702b%3A0xafc6fc171b487f87!2sSwearingen%20Engineering%20Center%2C%20Columbia%2C%20SC%2029201!5e0!3m2!1sen!2sus!4v1696102653656!5m2!1sen!2sus"
-             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            height="500" width="500"style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </aside>
     </div>
 
