--- a/FAQ.html
+++ b/FAQ.html
@@ -8,7 +8,8 @@
     Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
     <meta name="author" content="Jacob Sherer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ</title>
+    <link rel="stylesheet" href="style.css">
+    <title>FAQ - UofSC Cybersecurity Club</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
@@ -22,18 +23,18 @@
 
 <body>
     <header>
-        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="AboutUs.html">About Us</a>
+            <a class="nav-item" href="ContactUs.html">Contact Us</a>
+            <a class="nav-item" href="Resources.html">Resources</a>
+            <a class="nav-item" href="FAQ.html">FAQ</a>
+            <a class="nav-item" href="Events.html">Events</a>
         </nav>
     </header>
 
-    <section>
+    <article class="faq">
         <h2>Frequently Asked Questions</h2>
         <ol>
             <li>
@@ -73,7 +74,7 @@
                 the officers on Discord using @Officer, send an email on the Contact Us page, or talk to us in person at the next meeting.
             </li>
         </ol>
-    </section>
+    </article>
 
     <footer>
         <a href="mailto:socyber@mailbox.sc.edu" target=”_blank”>Email</a>
