--- a/Resources.html
+++ b/Resources.html
@@ -8,7 +8,8 @@
     Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
     <meta name="author" content="Jacob Sherer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Resources - UofSC Cybersecurity Club</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
@@ -22,45 +23,39 @@
 
 <body>
     <header>
-        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
+        <h1><img src="images/Logo.png" alt="logo" width="400"></h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="AboutUs.html">About Us</a>
+            <a class="nav-item" href="ContactUs.html">Contact Us</a>
+            <a class="nav-item" href="Resources.html">Resources</a>
+            <a class="nav-item" href="FAQ.html">FAQ</a>
+            <a class="nav-item" href="Events.html">Events</a>
         </nav>
     </header>
 
-    <section>
+    <section class="presentations">
         <h2>Meeting Presentations/Materials</h2>
-        <p>
-            <strong>9/13/2023</strong> - <a href="https://docs.google.com/presentation/d/11vjlxozqyhOpPFFRBw1nyuoSZr-YxyDMrmafMF9MUxg/edit?usp=sharing" target=”_blank”>Capture the Flag Introduction</a><br>
-            <strong>9/20/2023</strong> - <a href="https://docs.google.com/presentation/d/1IN-VYXoSsJHA_atW5suhsDVPc2hjsfUyxpfgpGtE2rw/edit?usp=sharing" target=”_blank”>Intro to Linux</a><br>
-            <em>More to come as meetings happen throughout the semester!</em>
-        </p>
+        <strong>9/13/2023</strong> - <a href="https://docs.google.com/presentation/d/11vjlxozqyhOpPFFRBw1nyuoSZr-YxyDMrmafMF9MUxg/edit?usp=sharing" target=”_blank”>Capture the Flag Introduction</a><br>
+        <strong>9/20/2023</strong> - <a href="https://docs.google.com/presentation/d/1IN-VYXoSsJHA_atW5suhsDVPc2hjsfUyxpfgpGtE2rw/edit?usp=sharing" target=”_blank”>Intro to Linux</a><br>
+        <em>More to come as meetings happen throughout the semester!</em>
     </section>
 
-    <section>
+    <section class="learning">
         <h2>Learning Websites</h2>
-        <p>
-            <a href="https://overthewire.org/wargames/" target=”_blank”><strong>OverTheWire</strong></a> – Basic Linux skill through Bandit course and basic web skills through Natas course<br>
-            <a href="https://picoctf.org/" target=”_blank”><strong>PicoCTF</strong></a> – General skills section is a good starting point, and the other categories are great introductions with some higher level challenges in each section<br>
-            <a href="https://imaginaryctf.org/" target=”_blank”><strong>ImaginaryCTF</strong></a> – Similar to PicoCTF with different CTF challenges<br>
-            <a href="https://tryhackme.com/" target=”_blank”><strong>TryHackMe</strong></a> – All levels of challenges with great learning modules as well for almost every category<br>
-            <a href="https://www.hackthebox.com/" target=”_blank”><strong>HackTheBox</strong></a> – Similar to TryHackMe with learning and challenges for almost every category<br>
-            <a href="https://ctf101.org/" target=”_blank”><strong>CTF101</strong></a> – Basic introductory wiki on most categories and commonly used techniques<br>
-            <a href="https://linux.die.net/man/" target=”_blank”><strong>Linux Man Pages</strong></a> – Official Linux documentation of all the commands
-        </p>
+        <a href="https://overthewire.org/wargames/" target=”_blank”><strong>OverTheWire</strong></a> – Basic Linux skill through Bandit course and basic web skills through Natas course<br>
+        <a href="https://picoctf.org/" target=”_blank”><strong>PicoCTF</strong></a> – General skills section is a good starting point, and the other categories are great introductions with some higher level challenges in each section<br>
+        <a href="https://imaginaryctf.org/" target=”_blank”><strong>ImaginaryCTF</strong></a> – Similar to PicoCTF with different CTF challenges<br>
+        <a href="https://tryhackme.com/" target=”_blank”><strong>TryHackMe</strong></a> – All levels of challenges with great learning modules as well for almost every category<br>
+        <a href="https://www.hackthebox.com/" target=”_blank”><strong>HackTheBox</strong></a> – Similar to TryHackMe with learning and challenges for almost every category<br>
+        <a href="https://ctf101.org/" target=”_blank”><strong>CTF101</strong></a> – Basic introductory wiki on most categories and commonly used techniques<br>
+        <a href="https://linux.die.net/man/" target=”_blank”><strong>Linux Man Pages</strong></a> – Official Linux documentation of all the commands
     </section>
 
-    <section>
+    <section class="documents">
         <h2>Club Documents</h2>
-        <p>
-            <a href="pages/Cyber_Security_Club.pdf" target=”_blank”>Constitution</a><br>
-            <a href="pages/bylaws.pdf" target=”_blank”>Bylaws</a>
-        </p>
+        <a href="pages/Cyber_Security_Club.pdf" target=”_blank”>Constitution</a><br>
+        <a href="pages/bylaws.pdf" target=”_blank”>Bylaws</a>
     </section>
     
     <footer>
