--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     Campus Cybersecurity, Cybersecurity Events, Security, Student Cybersecurity, Cybersecurity Enthusiasts">
     <meta name="author" content="Jacob Sherer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Home - UofSC Cybersecurity Club</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BJJSEFFZE"></script>
@@ -22,22 +23,23 @@
 
 <body>
     <header>
-        <h1><img src="/images/Logo.png" alt="logo" width="400"></h1>
+        <img src="images/Logo.png" alt="logo" width="400">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="AboutUs.html">About Us</a>
-            <a href="ContactUs.html">Contact Us</a>
-            <a href="Resources.html">Resources</a>
-            <a href="FAQ.html">FAQ</a>
-            <a href="Events.html">Events</a>
+            <a class="nav-item" href="index.html">Home</a>
+            <a class="nav-item" href="AboutUs.html">About Us</a>
+            <a class="nav-item" href="ContactUs.html">Contact Us</a>
+            <a class="nav-item" href="Resources.html">Resources</a>
+            <a class="nav-item" href="FAQ.html">FAQ</a>
+            <a class="nav-item" href="Events.html">Events</a>
         </nav>
     </header>
 
-    <section>
-        <img src="images/homeBackground.jpg" alt="Background" width="600"><h2>University of South Carolina Cybersecurity Club</h2>
-    </section>
+    <div class="background">
+        <h2 class="center">University of South Carolina Cybersecurity Club</h2>
+    </div>
 
-    <div>
+    <div class="join">
+        <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Join</a>
         <p>Join our discord for more information</p>
     </div>
 
