small CSS fixes

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -44,7 +44,7 @@
             prior knowledge required.</p>
     </article>
 
-    <div>
+    <div class="about">
         <article>
             <h2>About The Meetings</h2>
             <p>We have our weekly meetings on Wednesdays from 6:00-7:30 pm inside of Swearingen 2A17. Though this information 
