--- a/Events.html
+++ b/Events.html
@@ -40,10 +40,14 @@
     </article>
 
     <footer>
-        <a href="mailto:socyber@mailbox.sc.edu" target=”_blank”>Email</a>
-        <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
-        <a href="https://garnetgate.sa.sc.edu/organization/cyber" target=”_blank”>GarnetGate</a>
-        <p>University of South Carolina Cybersecurity Club 2023</p>
+        <div class="footerLinks">
+            <a href="mailto:socyber@mailbox.sc.edu" target=”_blank”>Email</a>
+            <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
+            <a href="https://garnetgate.sa.sc.edu/organization/cyber" target=”_blank”>GarnetGate</a>
+        </div>
+        <div class="copyright">
+            <p>University of South Carolina Cybersecurity Club 2023</p>
+        </div>
     </footer>
 </body>
 </html>
