--- a/AboutUs.html
+++ b/AboutUs.html
@@ -52,12 +52,12 @@
                 the meetings is generally a time to be social and have some food while enjoying each other’s company. Then we 
                 move into a classroom where we will have some form of learning experience, whether it’s a presentation by a club 
                 member or hands on lab that you could do from your laptop.</p>
+            <aside id="map">
+                <!--Copied from Google Maps-->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.1250268570593!2d-81.03204692362301!3d33.98932222104887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f8bad8f7f3702b%3A0xafc6fc171b487f87!2sSwearingen%20Engineering%20Center%2C%20Columbia%2C%20SC%2029201!5e0!3m2!1sen!2sus!4v1696102653656!5m2!1sen!2sus"
+                height="500" width="500"style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </aside>
         </article>
-        <aside class="map">
-            <!--Copied from Google Maps-->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.1250268570593!2d-81.03204692362301!3d33.98932222104887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f8bad8f7f3702b%3A0xafc6fc171b487f87!2sSwearingen%20Engineering%20Center%2C%20Columbia%2C%20SC%2029201!5e0!3m2!1sen!2sus!4v1696102653656!5m2!1sen!2sus"
-            height="500" width="500"style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </aside>
     </div>
 
     <article>
@@ -80,11 +80,15 @@
             page to find the “PCDC Introduction” presentation for a basic overview.</p>
      </article>
 
-    <footer>
-        <a href="mailto:socyber@mailbox.sc.edu" target=”_blank”>Email</a>
-        <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
-        <a href="https://garnetgate.sa.sc.edu/organization/cyber" target=”_blank”>GarnetGate</a>
-        <p>University of South Carolina Cybersecurity Club 2023</p>
+     <footer>
+        <div class="footerLinks">
+            <a href="mailto:socyber@mailbox.sc.edu" target=”_blank”>Email</a>
+            <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
+            <a href="https://garnetgate.sa.sc.edu/organization/cyber" target=”_blank”>GarnetGate</a>
+        </div>
+        <div class="copyright">
+            <p>University of South Carolina Cybersecurity Club 2023</p>
+        </div>
     </footer>
 </body>
 </html>
