--- a/ContactUs.html
+++ b/ContactUs.html
@@ -36,7 +36,7 @@
     <div class="contact-container">
         <aside class="discord">
             <p class="discord-text">Join our Discord for more information and to ask any questions!</p>
-            <a class="discord-link" href="https://discord.gg/qD8vbFmuVC" target=”_blank”>Discord</a>
+            <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”><img class="discord-link" src="images/discord-mark-white.png" height="150"></a>
         </aside>
         <aside class="form">Or fill out this form to contact us directly!<br><br>
             <form id="form" action="#" method="post">
