--- a/ContactUs.html
+++ b/ContactUs.html
@@ -39,7 +39,7 @@
             <a href="https://discord.gg/qD8vbFmuVC" target=”_blank”><img class="discord-link" src="images/discord-mark-white.png" height="150"></a>
         </aside>
         <aside class="form">Or fill out this form to contact us directly!<br><br>
-            <form id="form" action="" method="post">
+            <form id="form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name"><br>
                 <label for="email">Email:</label>
